# pi_cam

./: cam.py  pyproject.toml
picam/: pyvenv.cfg
templates/: bak_index.html  index.html
